Bug 72148 - flat text database (e.g. csv) with header lose one row at each refresh
Summary: flat text database (e.g. csv) with header lose one row at each refresh
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
4.1.0.0.beta1
Hardware: All All
: high major
Assignee: Lionel Elie Mamane
URL:
Whiteboard: target:4.3.0 target:4.2.0.0.beta2 tar...
Keywords: regression
: 72784 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-11-29 12:54 UTC by domingo.sacristan
Modified: 2013-12-17 13:32 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Unzip the file. There is a database and a *.csv-file connected to the database. (2.37 KB, application/zip)
2013-11-29 15:50 UTC, Robert Großkopf
Details
console + bt with master sources (9.56 KB, text/plain)
2013-11-29 21:35 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description domingo.sacristan 2013-11-29 12:54:56 UTC
By refresh tabledata on database from typ text fewer and fewer records are displayed.

Testcase:

- create a file with some records and copy the file to the text files Path you will work
- create a new database
- connect to an existing database from typ "Text"
- open the the database
- open the table 
- refresh the data
- the first record is no longer displayed
- if you continue to refresh the data, the records will be one after another disappears
Comment 1 domingo.sacristan 2013-11-29 12:59:09 UTC
This wrong behaviour remains on Libreoffice 4.1.4 RC1
Comment 2 Robert Großkopf 2013-11-29 15:50:39 UTC
Created attachment 90001 [details]
Unzip the file. There is a database and a *.csv-file connected to the database.

I can confirm this behavior. Last Version it worked well is LO 4.0.5.2 on my system. The buggy behavior first appears in LO 4.1.0.0.beta1.
My system: OpenSUSE 64bit rpm Linux.
Comment 3 Julien Nabet 2013-11-29 21:17:30 UTC
On pc Debian x86-64 with master sources updated today, I can reproduce this.
After some tests, I noticed:
- each time you click refresh, you lose a row (first one each time)
- each time you open the table (except first time), you lose a row

No specific console logs.

Lionel: You might be interested in this one.
Comment 4 Julien Nabet 2013-11-29 21:35:46 UTC
Created attachment 90003 [details]
console + bt with master sources

I refreshed the table until I got a backtrace.

Hope it helps.
Comment 5 Commit Notification 2013-11-30 11:04:18 UTC
Lionel Elie Mamane committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7a64727f790f001ec42dafe38caeb86dfb6ddab1

fdo#72148 if expecting table at begin, explicitly set it so



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2013-11-30 11:08:43 UTC
Lionel Elie Mamane committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=be6bed2ca4083039bfcbd62f9603efa3a0bdd3dc&h=libreoffice-4-2

fdo#72148 if expecting table at begin, explicitly set it so


It will be available in LibreOffice 4.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Lionel Elie Mamane 2013-11-30 11:43:34 UTC
Fix for 4.1.x submitted for review in gerrit.
Comment 8 Julien Nabet 2013-11-30 12:07:27 UTC
I gave a new try, it's ok now.
Thank you Lionel!
Comment 9 Commit Notification 2013-12-02 11:17:46 UTC
Lionel Elie Mamane committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f4125fefab88b58c47a763af01daf1c3e15de15e&h=libreoffice-4-1

fdo#72148 if expecting table at begin, explicitly set it so


It will be available in LibreOffice 4.1.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2013-12-10 15:05:58 UTC
Lionel Elie Mamane committed a patch related to this issue.
It has been pushed to "libreoffice-4-1-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0b3585a734fd2b4c07ca980eac407fe09e0c95c8&h=libreoffice-4-1-4

fdo#72148 if expecting table at begin, explicitly set it so


It will be available already in LibreOffice 4.1.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Lionel Elie Mamane 2013-12-17 13:32:03 UTC
*** Bug 72784 has been marked as a duplicate of this bug. ***