fdo#72148 if expecting table at begin, explicitly set it so

Change-Id: Ic876603e5860b987280b73726fd79a071a9c833c